<resources>
    <string name="app_name">Agenda_Online</string>


    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengoUnaCuentaTXT">Tengo Una Cuenta</string>

    <!--INTERFAZ DE MENU-->

    <string name="CerrarSession">Salir</string>

    <!--INTERFAZ DE Loggin-->
    
    <string name="IniciarSessionTXT">Iniciar Session</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes una cuenta?. Registrate</string>
</resources>